// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StorySource customTitle snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  height: 32px;
  visibility: hidden;
  padding-right: 4px;
  left: -22px;
}

.emotion-3:hover {
  visibility: visible;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight: 600;
  line-height: 1.25;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  margin-top: 16px;
  margin-bottom: 16px;
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 4px;
  padding-bottom: 4px;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  cursor: pointer;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-left: 8px;
  padding-bottom: 8px;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-10 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-10 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-12 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-12 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-12 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-13 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.emotion-18 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-19 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-19 code {
  color: inherit;
}

.emotion-20 {
  display: inline-block;
}

<div
    class="emotion-0"
    data-testid="story-source"
  >
    <div
      class="emotion-1"
      id="story-source"
    >
      <div
        class="emotion-2"
      >
        <a
          aria-label="navigate to Story source section"
          class="emotion-3"
          data-id="story-source"
          data-level="3"
          data-title="Story source"
          href="http://localhost/#story-source"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="18"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 16 16"
            width="18"
          >
            <path
              d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <h3
          class="emotion-4"
        >
          <div
            class="emotion-5"
          >
            Story source
            <a
              aria-expanded="true"
              class="emotion-6"
            >
              <span
                class="emotion-7"
              >
                <svg
                  aria-hidden="true"
                  class="octicon"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: middle;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M12.78 6.22a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06 0L3.22 7.28a.75.75 0 011.06-1.06L8 9.94l3.72-3.72a.75.75 0 011.06 0z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </div>
        </h3>
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="emotion-8"
          >
            <div
              class="emotion-9"
            >
              <div
                class="emotion-10"
              >
                <button
                  aria-label="copy the displayed source code"
                  class="emotion-11"
                >
                  copy
                </button>
              </div>
              <div
                class="emotion-12"
              >
                <a
                  aria-label="browse repository"
                  class="emotion-13"
                  href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  browse
                </a>
              </div>
              <div
                class="emotion-12"
              >
                <a
                  aria-label="browse readme documentation"
                  class="emotion-13"
                  href="https://github.com/ccontrols/component-controls/tree/master#readme"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  docs
                </a>
              </div>
              <div
                class="emotion-12"
              >
                <a
                  aria-label="browse filed issues"
                  class="emotion-13"
                  href="https://github.com/ccontrols/component-controls/issues"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  issues
                </a>
              </div>
            </div>
          </div>
          <div
            class="emotion-18"
          >
            <pre
              class="prism-code language-jsx emotion-19"
              style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; margin: 0px;"
            >
              <div
                class="token-line"
                style="color: rgb(114, 143, 203);"
              >
                <span
                  class="token punctuation emotion-20"
                  style="color: rgb(182, 173, 154);"
                >
                  (
                </span>
                <span
                  class="token punctuation emotion-20"
                  style="color: rgb(182, 173, 154);"
                >
                  )
                </span>
                <span
                  class="token plain emotion-20"
                >
                   
                </span>
                <span
                  class="token operator emotion-20"
                  style="color: rgb(6, 50, 137);"
                >
                  =&gt;
                </span>
                <span
                  class="token plain emotion-20"
                >
                   
                </span>
                <span
                  class="token string emotion-20"
                  style="color: rgb(114, 143, 203);"
                >
                  'hello'
                </span>
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StorySource noMargin snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-5 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-5 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-7 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-7 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.emotion-13 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-14 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-14 code {
  color: inherit;
}

.emotion-15 {
  display: inline-block;
}

<div
    class="emotion-0"
    data-testid="story-source"
  >
    <div
      class="emotion-1"
      id=""
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <button
                  aria-label="copy the displayed source code"
                  class="emotion-6"
                >
                  copy
                </button>
              </div>
              <div
                class="emotion-7"
              >
                <a
                  aria-label="browse repository"
                  class="emotion-8"
                  href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  browse
                </a>
              </div>
              <div
                class="emotion-7"
              >
                <a
                  aria-label="browse readme documentation"
                  class="emotion-8"
                  href="https://github.com/ccontrols/component-controls/tree/master#readme"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  docs
                </a>
              </div>
              <div
                class="emotion-7"
              >
                <a
                  aria-label="browse filed issues"
                  class="emotion-8"
                  href="https://github.com/ccontrols/component-controls/issues"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  issues
                </a>
              </div>
            </div>
          </div>
          <div
            class="emotion-13"
          >
            <pre
              class="prism-code language-jsx emotion-14"
              style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; margin: 0px;"
            >
              <div
                class="token-line"
                style="color: rgb(114, 143, 203);"
              >
                <span
                  class="token punctuation emotion-15"
                  style="color: rgb(182, 173, 154);"
                >
                  (
                </span>
                <span
                  class="token punctuation emotion-15"
                  style="color: rgb(182, 173, 154);"
                >
                  )
                </span>
                <span
                  class="token plain emotion-15"
                >
                   
                </span>
                <span
                  class="token operator emotion-15"
                  style="color: rgb(6, 50, 137);"
                >
                  =&gt;
                </span>
                <span
                  class="token plain emotion-15"
                >
                   
                </span>
                <span
                  class="token string emotion-15"
                  style="color: rgb(114, 143, 203);"
                >
                  'hello'
                </span>
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StorySource notCollapsible snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  height: 32px;
  visibility: hidden;
  padding-right: 4px;
  left: -20px;
}

.emotion-3:hover {
  visibility: visible;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  font-weight: 600;
  line-height: 1.25;
  font-family: medium-content-title-font,Georgia,Cambria,"Times New Roman",Times,serif;
  line-height: 1.25;
  font-weight: 600;
  font-size: 16px;
  margin-top: 16px;
  margin-bottom: 16px;
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 4px;
  padding-bottom: 4px;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-7 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-7 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-9 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-9 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-16 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-16 code {
  color: inherit;
}

.emotion-17 {
  display: inline-block;
}

<div
    class="emotion-0"
    data-testid="story-source"
  >
    <div
      class="emotion-1"
      id="story-source-id-of-story"
    >
      <div
        class="emotion-2"
      >
        <a
          aria-label="navigate to story section"
          class="emotion-3"
          data-id="story-source-id-of-story"
          data-level="4"
          data-title="story"
          href="http://localhost/#story-source-id-of-story"
        >
          <svg
            aria-hidden="true"
            class="octicon"
            fill="currentColor"
            height="16"
            role="img"
            style="display: inline-block; user-select: none; vertical-align: middle;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <h4
          class="emotion-4"
        >
          story
        </h4>
      </div>
    </div>
    <div>
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <button
              aria-label="copy the displayed source code"
              class="emotion-8"
            >
              copy
            </button>
          </div>
          <div
            class="emotion-9"
          >
            <a
              aria-label="browse repository"
              class="emotion-10"
              href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
              rel="noopener noreferrer"
              target="_blank"
            >
              browse
            </a>
          </div>
          <div
            class="emotion-9"
          >
            <a
              aria-label="browse readme documentation"
              class="emotion-10"
              href="https://github.com/ccontrols/component-controls/tree/master#readme"
              rel="noopener noreferrer"
              target="_blank"
            >
              docs
            </a>
          </div>
          <div
            class="emotion-9"
          >
            <a
              aria-label="browse filed issues"
              class="emotion-10"
              href="https://github.com/ccontrols/component-controls/issues"
              rel="noopener noreferrer"
              target="_blank"
            >
              issues
            </a>
          </div>
        </div>
      </div>
      <div
        class="emotion-15"
      >
        <pre
          class="prism-code language-jsx emotion-16"
          style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; margin: 0px;"
        >
          <div
            class="token-line"
            style="color: rgb(114, 143, 203);"
          >
            <span
              class="token punctuation emotion-17"
              style="color: rgb(182, 173, 154);"
            >
              (
            </span>
            <span
              class="token punctuation emotion-17"
              style="color: rgb(182, 173, 154);"
            >
              )
            </span>
            <span
              class="token plain emotion-17"
            >
               
            </span>
            <span
              class="token operator emotion-17"
              style="color: rgb(6, 50, 137);"
            >
              =&gt;
            </span>
            <span
              class="token plain emotion-17"
            >
               
            </span>
            <span
              class="token string emotion-17"
              style="color: rgb(114, 143, 203);"
            >
              'hello'
            </span>
          </div>
        </pre>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StorySource overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-5 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-5 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-7 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-7 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-11 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-11 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-16 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-16 code {
  color: inherit;
}

.emotion-17 {
  display: inline-block;
}

.emotion-19 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(182,173,154,0.15);
  border: 2px solid #b6ad9a;
}

.emotion-20 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-22 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(114,143,203,0.15);
  border: 2px solid #728fcb;
}

<div
    class="emotion-0"
    data-testid="story-source"
  >
    <div
      class="emotion-1"
      id=""
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <button
                  aria-label="copy the displayed source code"
                  class="emotion-6"
                >
                  copy
                </button>
              </div>
              <div
                class="emotion-7"
              >
                <a
                  aria-label="browse repository"
                  class="emotion-8"
                  href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  browse
                </a>
              </div>
              <div
                class="emotion-7"
              >
                <a
                  aria-label="browse readme documentation"
                  class="emotion-8"
                  href="https://github.com/ccontrols/component-controls/tree/master#readme"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  docs
                </a>
              </div>
              <div
                class="emotion-11"
              >
                <a
                  aria-label="browse filed issues"
                  class="emotion-8"
                  href="https://github.com/ccontrols/component-controls/issues"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  issues
                </a>
              </div>
              <div
                class="emotion-11"
              >
                <button
                  class="emotion-6"
                >
                  values
                </button>
              </div>
            </div>
          </div>
          <div
            class="emotion-15"
          >
            <pre
              class="prism-code language-jsx emotion-16"
              style="background-color: rgb(250, 248, 245); color: rgb(114, 143, 203); padding: 25px 10px 10px; margin: 0px;"
            >
              <div
                class="token-line"
                style="color: rgb(114, 143, 203);"
              >
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  (
                </span>
                <span
                  class="token parameter punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  {
                </span>
                 
                <span
                  class="token parameter emotion-19"
                >
                  <span
                    class="emotion-20"
                  >
                    name
                  </span>
                </span>
                <span
                  class="token parameter punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  ,
                </span>
                 
                <span
                  class="token parameter emotion-22"
                >
                  <span
                    class="emotion-20"
                  >
                    age
                  </span>
                </span>
                 
                <span
                  class="token parameter punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  }
                </span>
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  )
                </span>
                <span
                  class="token plain emotion-17"
                >
                   
                </span>
                <span
                  class="token operator emotion-17"
                  style="color: rgb(6, 50, 137);"
                >
                  =&gt;
                </span>
                <span
                  class="token plain emotion-17"
                >
                   
                </span>
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  (
                </span>
                <span
                  class="token plain emotion-17"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(114, 143, 203);"
              >
                <span
                  class="token plain emotion-17"
                >
                    
                </span>
                <span
                  class="token tag punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  &lt;
                </span>
                <span
                  class="token tag emotion-17"
                  style="color: rgb(6, 50, 137);"
                >
                  h2
                </span>
                <span
                  class="token tag punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  &gt;
                </span>
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  {
                </span>
                <span
                  class="token template-string template-punctuation string emotion-17"
                  style="color: rgb(114, 143, 203);"
                >
                  \`
                </span>
                <span
                  class="token template-string string emotion-17"
                  style="color: rgb(114, 143, 203);"
                >
                  Hello, my name is 
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  \${
                </span>
                <span
                  class="token template-string interpolation emotion-19"
                >
                  <span
                    class="emotion-20"
                  >
                    name
                  </span>
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  }
                </span>
                <span
                  class="token template-string string emotion-17"
                  style="color: rgb(114, 143, 203);"
                >
                  , and I am 
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  \${
                </span>
                <span
                  class="token template-string interpolation emotion-22"
                >
                  <span
                    class="emotion-20"
                  >
                    age
                  </span>
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  }
                </span>
                <span
                  class="token template-string string emotion-17"
                  style="color: rgb(114, 143, 203);"
                >
                   years old.
                </span>
                <span
                  class="token template-string template-punctuation string emotion-17"
                  style="color: rgb(114, 143, 203);"
                >
                  \`
                </span>
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  }
                </span>
                <span
                  class="token tag punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag emotion-17"
                  style="color: rgb(6, 50, 137);"
                >
                  h2
                </span>
                <span
                  class="token tag punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  &gt;
                </span>
                <span
                  class="token plain emotion-17"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(114, 143, 203);"
              >
                <span
                  class="token plain emotion-17"
                />
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  )
                </span>
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(182, 173, 154);"
                >
                  ;
                </span>
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StorySource theme snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2:hover a {
  visibility: visible;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-5 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-5 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-7 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-7 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-11 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-11 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-15 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-16 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-16 code {
  color: inherit;
}

.emotion-17 {
  display: inline-block;
}

.emotion-19 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(255,238,128,0.15);
  border: 2px solid rgb(255, 238, 128);
}

.emotion-20 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-22 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(239,83,80,0);
  border: 2px solid rgba(239, 83, 80, 0.56);
}

<div
    class="emotion-0"
    data-testid="story-source"
  >
    <div
      class="emotion-1"
      id=""
    >
      <div
        class="emotion-2"
      />
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto"
      style="height: auto; overflow: visible;"
    >
      <div>
        <div>
          <div
            class="emotion-3"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <button
                  aria-label="copy the displayed source code"
                  class="emotion-6"
                >
                  copy
                </button>
              </div>
              <div
                class="emotion-7"
              >
                <a
                  aria-label="browse repository"
                  class="emotion-8"
                  href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  browse
                </a>
              </div>
              <div
                class="emotion-7"
              >
                <a
                  aria-label="browse readme documentation"
                  class="emotion-8"
                  href="https://github.com/ccontrols/component-controls/tree/master#readme"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  docs
                </a>
              </div>
              <div
                class="emotion-11"
              >
                <a
                  aria-label="browse filed issues"
                  class="emotion-8"
                  href="https://github.com/ccontrols/component-controls/issues"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  issues
                </a>
              </div>
              <div
                class="emotion-11"
              >
                <button
                  class="emotion-6"
                >
                  values
                </button>
              </div>
            </div>
          </div>
          <div
            class="emotion-15"
          >
            <pre
              class="prism-code language-jsx emotion-16"
              style="color: rgb(158, 254, 255); background-color: rgb(45, 42, 85); padding: 25px 10px 10px; margin: 0px;"
            >
              <div
                class="token-line"
                style="color: rgb(158, 254, 255);"
              >
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  (
                </span>
                <span
                  class="token parameter punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  {
                </span>
                 
                <span
                  class="token parameter emotion-19"
                >
                  <span
                    class="emotion-20"
                  >
                    name
                  </span>
                </span>
                <span
                  class="token parameter punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  ,
                </span>
                 
                <span
                  class="token parameter emotion-22"
                >
                  <span
                    class="emotion-20"
                  >
                    age
                  </span>
                </span>
                 
                <span
                  class="token parameter punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  }
                </span>
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  )
                </span>
                <span
                  class="token plain emotion-17"
                >
                   
                </span>
                <span
                  class="token operator emotion-17"
                  style="color: rgb(255, 157, 0);"
                >
                  =&gt;
                </span>
                <span
                  class="token plain emotion-17"
                >
                   
                </span>
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  (
                </span>
                <span
                  class="token plain emotion-17"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(158, 254, 255);"
              >
                <span
                  class="token plain emotion-17"
                >
                    
                </span>
                <span
                  class="token tag punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  &lt;
                </span>
                <span
                  class="token tag emotion-17"
                  style="color: rgb(255, 157, 0);"
                >
                  h2
                </span>
                <span
                  class="token tag punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  &gt;
                </span>
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  {
                </span>
                <span
                  class="token template-string template-punctuation string emotion-17"
                  style="color: rgb(165, 255, 144);"
                >
                  \`
                </span>
                <span
                  class="token template-string string emotion-17"
                  style="color: rgb(165, 255, 144);"
                >
                  Hello, my name is 
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  \${
                </span>
                <span
                  class="token template-string interpolation emotion-19"
                >
                  <span
                    class="emotion-20"
                  >
                    name
                  </span>
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  }
                </span>
                <span
                  class="token template-string string emotion-17"
                  style="color: rgb(165, 255, 144);"
                >
                  , and I am 
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  \${
                </span>
                <span
                  class="token template-string interpolation emotion-22"
                >
                  <span
                    class="emotion-20"
                  >
                    age
                  </span>
                </span>
                <span
                  class="token template-string interpolation interpolation-punctuation punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  }
                </span>
                <span
                  class="token template-string string emotion-17"
                  style="color: rgb(165, 255, 144);"
                >
                   years old.
                </span>
                <span
                  class="token template-string template-punctuation string emotion-17"
                  style="color: rgb(165, 255, 144);"
                >
                  \`
                </span>
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  }
                </span>
                <span
                  class="token tag punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  &lt;/
                </span>
                <span
                  class="token tag emotion-17"
                  style="color: rgb(255, 157, 0);"
                >
                  h2
                </span>
                <span
                  class="token tag punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  &gt;
                </span>
                <span
                  class="token plain emotion-17"
                />
              </div>
              <div
                class="token-line"
                style="color: rgb(158, 254, 255);"
              >
                <span
                  class="token plain emotion-17"
                />
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  )
                </span>
                <span
                  class="token punctuation emotion-17"
                  style="color: rgb(255, 255, 255);"
                >
                  ;
                </span>
              </div>
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StorySource themeSelector snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  margin-left: auto;
}

.emotion-2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 4px;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-2 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-2 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: #5c6ac4;
  border: 0;
  border-radius: 4px;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
  border: 1px solid rgba(0, 0, 0, 0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  scroll-margin-top: 5rem;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7:hover a {
  visibility: visible;
}

.emotion-12 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-12 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-12 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-13 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  color: #5c6ac4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.emotion-16 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 0;
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 4px;
  font-size: 14px;
}

.emotion-16 a {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-16 button {
  color: #ffffff;
  background-color: #3B817D;
  -webkit-text-fill-color: initial;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  line-height: 1;
  border-radius: 1px;
  display: inline-block;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 3px 1px,rgba(0, 0, 0, 0.1) 0 0 0 1px;
  border: 1px solid #3B817D;
}

.emotion-21 {
  font-family: Menlo,monospace;
  overflow-x: auto;
  background-color: #e6e6e6;
}

.emotion-21 code {
  color: inherit;
}

.emotion-22 {
  display: inline-block;
}

.emotion-24 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(189,147,249,0.15);
  border: 2px solid rgb(189, 147, 249);
}

.emotion-25 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.emotion-27 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: inline-block;
  padding-left: 4px;
  padding-right: 4px;
  border-radius: 5px;
  white-space: nowrap;
  background-color: rgba(80,250,123,0.15);
  border: 2px solid rgb(80, 250, 123);
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <button
            class="emotion-3"
          >
            dracula
          </button>
        </div>
      </div>
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
        data-testid="story-source"
      >
        <div
          class="emotion-6"
          id=""
        >
          <div
            class="emotion-7"
          />
        </div>
        <div
          aria-hidden="false"
          class="rah-static rah-static--height-auto"
          style="height: auto; overflow: visible;"
        >
          <div>
            <div>
              <div
                class="emotion-0"
              >
                <div
                  class="emotion-1"
                >
                  <div
                    class="emotion-2"
                  >
                    <button
                      aria-label="copy the displayed source code"
                      class="emotion-3"
                    >
                      copy
                    </button>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <a
                      aria-label="browse repository"
                      class="emotion-13"
                      href="https://github.com/ccontrols/component-controls/tree/master/ui/blocks/src/Title/Title.stories.tsx"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      browse
                    </a>
                  </div>
                  <div
                    class="emotion-12"
                  >
                    <a
                      aria-label="browse readme documentation"
                      class="emotion-13"
                      href="https://github.com/ccontrols/component-controls/tree/master#readme"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      docs
                    </a>
                  </div>
                  <div
                    class="emotion-16"
                  >
                    <a
                      aria-label="browse filed issues"
                      class="emotion-13"
                      href="https://github.com/ccontrols/component-controls/issues"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      issues
                    </a>
                  </div>
                  <div
                    class="emotion-16"
                  >
                    <button
                      class="emotion-3"
                    >
                      values
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="emotion-4"
              >
                <pre
                  class="prism-code language-jsx emotion-21"
                  style="color: rgb(248, 248, 242); background-color: rgb(40, 42, 54); padding: 25px 10px 10px; margin: 0px;"
                >
                  <div
                    class="token-line"
                    style="color: rgb(248, 248, 242);"
                  >
                    <span
                      class="token punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      (
                    </span>
                    <span
                      class="token parameter punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      {
                    </span>
                     
                    <span
                      class="token parameter emotion-24"
                    >
                      <span
                        class="emotion-25"
                      >
                        name
                      </span>
                    </span>
                    <span
                      class="token parameter punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      ,
                    </span>
                     
                    <span
                      class="token parameter emotion-27"
                    >
                      <span
                        class="emotion-25"
                      >
                        age
                      </span>
                    </span>
                     
                    <span
                      class="token parameter punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      }
                    </span>
                    <span
                      class="token punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      )
                    </span>
                    <span
                      class="token plain emotion-22"
                    >
                       
                    </span>
                    <span
                      class="token operator emotion-22"
                    >
                      =&gt;
                    </span>
                    <span
                      class="token plain emotion-22"
                    >
                       
                    </span>
                    <span
                      class="token punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      (
                    </span>
                    <span
                      class="token plain emotion-22"
                    />
                  </div>
                  <div
                    class="token-line"
                    style="color: rgb(248, 248, 242);"
                  >
                    <span
                      class="token plain emotion-22"
                    >
                        
                    </span>
                    <span
                      class="token tag punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      &lt;
                    </span>
                    <span
                      class="token tag emotion-22"
                      style="color: rgb(255, 121, 198);"
                    >
                      h2
                    </span>
                    <span
                      class="token tag punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      &gt;
                    </span>
                    <span
                      class="token punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      {
                    </span>
                    <span
                      class="token template-string template-punctuation string emotion-22"
                      style="color: rgb(255, 121, 198);"
                    >
                      \`
                    </span>
                    <span
                      class="token template-string string emotion-22"
                      style="color: rgb(255, 121, 198);"
                    >
                      Hello, my name is 
                    </span>
                    <span
                      class="token template-string interpolation interpolation-punctuation punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      \${
                    </span>
                    <span
                      class="token template-string interpolation emotion-24"
                    >
                      <span
                        class="emotion-25"
                      >
                        name
                      </span>
                    </span>
                    <span
                      class="token template-string interpolation interpolation-punctuation punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      }
                    </span>
                    <span
                      class="token template-string string emotion-22"
                      style="color: rgb(255, 121, 198);"
                    >
                      , and I am 
                    </span>
                    <span
                      class="token template-string interpolation interpolation-punctuation punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      \${
                    </span>
                    <span
                      class="token template-string interpolation emotion-27"
                    >
                      <span
                        class="emotion-25"
                      >
                        age
                      </span>
                    </span>
                    <span
                      class="token template-string interpolation interpolation-punctuation punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      }
                    </span>
                    <span
                      class="token template-string string emotion-22"
                      style="color: rgb(255, 121, 198);"
                    >
                       years old.
                    </span>
                    <span
                      class="token template-string template-punctuation string emotion-22"
                      style="color: rgb(255, 121, 198);"
                    >
                      \`
                    </span>
                    <span
                      class="token punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      }
                    </span>
                    <span
                      class="token tag punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      &lt;/
                    </span>
                    <span
                      class="token tag emotion-22"
                      style="color: rgb(255, 121, 198);"
                    >
                      h2
                    </span>
                    <span
                      class="token tag punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      &gt;
                    </span>
                    <span
                      class="token plain emotion-22"
                    />
                  </div>
                  <div
                    class="token-line"
                    style="color: rgb(248, 248, 242);"
                  >
                    <span
                      class="token plain emotion-22"
                    />
                    <span
                      class="token punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      )
                    </span>
                    <span
                      class="token punctuation emotion-22"
                      style="color: rgb(248, 248, 242);"
                    >
                      ;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
